IT WORKED Enhance session management and UI improvements
- Updated `SessionHub.cs` with new methods for session state management and message handling.
- Added `LecturerConnectionId` property in `User.cs` for tracking lecturer connections.
- Improved UI in `CreateSession.cshtml` and `JoinSession.cshtml`, including modern chat design and session control buttons.
- Introduced `IsSessionLecturer` property in `CreateSession.cshtml.cs` for user role identification.
- Made `RequestId` and `Message` properties non-nullable in `Error.cshtml.cs` and `Index.cshtml.cs`.
- Updated SignalR configuration in `Program.cs` and added lecturer check in `SessionService.cs`.
- Refactored `session.js` for better video stream handling and user interactions.
- Updated dependencies in `package.json` and `package-lock.json` for WebRTC support.
- Added `launch.json` for debugging in Microsoft Edge.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/intisor/FutaMeet#readme",
   "dependencies": {
-    "@microsoft/signalr": "^8.0.7"
+    "@microsoft/signalr": "^7.0.14",
+    "@types/webrtc": "^0.0.33",
+    "simple-peer": "^9.11.1"
   }
 }
