--- a/.github/workflows/master_viidii.yml
+++ b/.github/workflows/master_viidii.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - viidii
+name: Build and deploy ASP.Net Core app to Azure Web App - viidii-cfa7hagsewc5h6cq
 
 on:
   push:
@@ -13,7 +10,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -21,17 +18,27 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: '9.0.x'  # Confirmed .NET 9
+
+      - name: Restore
+        run: |
+          cd futameetweb
+          dotnet restore
 
       - name: Build with dotnet
         run: |
-              cd futameetweb
-              dotnet build --configuration Release
+          cd futameetweb
+          dotnet build --configuration Release --no-restore
+
+      - name: Test
+        run: |
+          cd futameetweb
+          dotnet test --no-build
 
       - name: dotnet publish
         run: |
-              cd futameetweb
-              dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+          cd futameetweb
+          dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp" --no-build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
