--- a/.github/workflows/viidii1.yml
+++ b/.github/workflows/viidii1.yml
@@ -1,14 +1,17 @@
-name: Build and deploy .NET Core application to Web App viidii
+name: Deploy FutaMeetWeb to Azure
+
 on:
   push:
     branches:
-    - master
+      - master
+
 env:
-  AZURE_WEBAPP_NAME: viidii
-  AZURE_WEBAPP_PACKAGE_PATH: FutaMeetWeb\published
+  AZURE_WEBAPP_NAME: viidii-cfa7hagsewc5h6cq
+  AZURE_WEBAPP_PACKAGE_PATH: FutaMeetWeb/published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 9.0.x
   WORKING_DIRECTORY: FutaMeetWeb
+
 jobs:
   build:
     runs-on: windows-latest
@@ -31,6 +34,7 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
   deploy:
     runs-on: windows-latest
     needs: build
@@ -40,12 +44,9 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    - name: Azure Login
-      uses: azure/login@v2
-      with:
-        creds: ${{ secrets.viidii_SPN }}
     - name: Deploy to Azure WebApp
-      uses: azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
